// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TitleWrapper/> render() should render icon, points and not tier because data is missing 1`] = `
<Fragment>
  <CardHeaderIcon
    alt="Yotpo"
    src="test-file-stub"
  />
  <CardHeaderTitle>
    Yotpo
  </CardHeaderTitle>
  <CardHeaderBadge
    iconName="stars"
  >
    1
  </CardHeaderBadge>
  <CardHeaderStatusLabel />
  <ExpandAllButton />
</Fragment>
`;

exports[`<TitleWrapper/> render() should render icon, points and tier because data is correct 1`] = `
<Fragment>
  <CardHeaderIcon
    alt="Yotpo"
    src="test-file-stub"
  />
  <CardHeaderTitle>
    Yotpo
  </CardHeaderTitle>
  <CardHeaderBadge
    iconName="stars"
  >
    1
  </CardHeaderBadge>
  <CardHeaderStatusLabel>
    Vip
  </CardHeaderStatusLabel>
  <ExpandAllButton />
</Fragment>
`;
